--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Tribute Page project" />
-        <title>Tribute Page project</title>
+        <title>Coffee Tribute</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
+        <main id="main">
+            <h1 id="title">A Tribute to Coffee</h1>
+            <figure id="img-div">
+                <img id="image" src="https://assets.epicurious.com/photos/63e54a0664e14d52936a2937/16:9/w_960,c_limit/CoffeeSubscriptions_IG_V1_030922_6350_V1_final.jpg" alt="coffee beans">
+                <figcaption id="img-caption">Coffee beans make delicious coffee.</figcaption>
+            </figure>
+            <div id="tribute-info">
+                <p>Learn more about <a id="tribute-link" href="https://en.wikipedia.org/wiki/Coffee_bean" target="_blank">coffee beans</a>.</p>
+            </div>
+        </main>
 
     </body>
 </html>
